[gd_scene load_steps=5 format=3 uid="uid://c4avsyw2xgrox"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_kp1wf"]
[ext_resource type="Theme" uid="uid://odu0oflnsbko" path="res://assets/themes/main.tres" id="2_vfj5k"]
[ext_resource type="Theme" uid="uid://bfbmbvbe52s53" path="res://assets/themes/ammo.tres" id="3_62sh4"]
[ext_resource type="Theme" uid="uid://b6cje1ejjcffn" path="res://assets/themes/health.tres" id="3_ha305"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_kp1wf")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 32.0
offset_top = 960.0
offset_right = 212.0
offset_bottom = 1000.0
theme = ExtResource("3_ha305")
show_percentage = false

[node name="AmmoBar" type="ProgressBar" parent="."]
offset_left = 32.0
offset_top = 1008.0
offset_right = 212.0
offset_bottom = 1048.0
theme = ExtResource("3_62sh4")
show_percentage = false

[node name="ReloadHint" type="Label" parent="AmmoBar"]
visible = false
layout_mode = 0
offset_right = 180.0
offset_bottom = 40.0
theme = ExtResource("2_vfj5k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Kills" type="HBoxContainer" parent="."]
offset_left = 36.0
offset_top = 912.0
offset_right = 208.0
offset_bottom = 952.0
size_flags_horizontal = 3
theme = ExtResource("2_vfj5k")
theme_override_constants/separation = 2

[node name="KillsLabel" type="Label" parent="Kills"]
layout_mode = 2
size_flags_horizontal = 2
text = "Kills:"
vertical_alignment = 1

[node name="KillsCounter" type="Label" parent="Kills"]
layout_mode = 2
size_flags_horizontal = 10
horizontal_alignment = 2
vertical_alignment = 1

[node name="DEBUG" type="CanvasGroup" parent="."]
visible = false
position = Vector2(681, 538)

[node name="can_shoot" type="Label" parent="DEBUG"]
offset_right = 40.0
offset_bottom = 23.0
text = "can_shoot"

[node name="can_reload" type="Label" parent="DEBUG"]
offset_top = 32.0
offset_right = 40.0
offset_bottom = 55.0
text = "can_reload"

[node name="reload_partial" type="Label" parent="DEBUG"]
offset_top = 64.0
offset_right = 64.0
offset_bottom = 87.0
text = "reload_partial"

[node name="reload_full" type="Label" parent="DEBUG"]
offset_top = 96.0
offset_right = 40.0
offset_bottom = 119.0
text = "reload_full"

[node name="ammo" type="Label" parent="DEBUG"]
offset_top = 128.0
offset_right = 50.0
offset_bottom = 151.0
text = "ammo"

[node name="health" type="Label" parent="DEBUG"]
offset_top = 160.0
offset_right = 50.0
offset_bottom = 183.0
text = "health"

[node name="FPSLabel" type="Label" parent="."]
offset_left = 1832.0
offset_top = 8.0
offset_right = 1912.0
offset_bottom = 31.0
theme = ExtResource("2_vfj5k")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2
vertical_alignment = 1
